test/constructor/return_value.lox
struct Foo {
  fn init() {
    return "result" // error: can't return a value from an initializer
  }
}
